@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix issue 64 (OpenBSD support)
+
 
 Version 1.3.0 (2017-07-19)
 ==========================
